<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/baseline_arrow_back_24" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="4dp"
        app:cardCornerRadius="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <TableRow android:background="@color/softengreen">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/col1"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/coll"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/col3"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/myImageView1"
                    android:layout_width="110dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/peanut" />

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="#ff7f0e"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/Product"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/myImageView2"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/peanut" />

            </TableRow>

            <TableRow android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/sname"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="#ff7f0e"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/cname"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/sprice"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="#ff7f0e"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/Price"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/cprice"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/sbrand"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="#ff7f0e"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/Brand"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/cbrand"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </TableRow>


        </TableLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>